Bug 1757800 - Calculate scrollbar marks' positions with explicit `window.scrollMin{X,Y}`. r=jfkthame,emilio

In `vertical-rl` & `sideways-rl` writing modes, `window.scrollMinX` is not 0.

Differential Revision: https://phabricator.services.mozilla.com/D140485